fix slider spacing

--- a/css/bootstraphacks.css
+++ b/css/bootstraphacks.css
@@ -16,3 +16,7 @@ div.tool-link {
 	margin-left: auto;
 	margin-right: auto;
 }
+
+.slider {
+	margin-right: 10px;
+}
